<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2015 Fluo authors (see AUTHORS)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.fluo</groupId>
    <artifactId>fluo-io-parent</artifactId>
    <version>1</version>
  </parent>
  <artifactId>webindex-parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>WebIndex Parent</name>
  <description>Example Fluo application that creates web index using CommonCrawl data.</description>
  <url>https://github.com/fluo-io/webindex</url>
  <modules>
    <module>modules/core</module>
    <module>modules/data</module>
    <module>modules/ui</module>
  </modules>
  <properties>
    <accumulo.version>1.6.4</accumulo.version>
    <checkstyle.skip>true</checkstyle.skip>
    <dropwizard.version>0.8.2</dropwizard.version>
    <fluo-recipes.version>1.0.0-beta-2-SNAPSHOT</fluo-recipes.version>
    <fluo.version>1.0.0-beta-2</fluo.version>
    <hadoop.version>2.6.3</hadoop.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <thrift.version>0.9.1</thrift.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.esotericsoftware.yamlbeans</groupId>
        <artifactId>yamlbeans</artifactId>
        <version>1.09</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.3.1</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
        <groupId>io.dropwizard</groupId>
        <artifactId>dropwizard-core</artifactId>
        <version>${dropwizard.version}</version>
      </dependency>
      <dependency>
        <groupId>io.dropwizard</groupId>
        <artifactId>dropwizard-views-freemarker</artifactId>
        <version>${dropwizard.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-api</artifactId>
        <version>${fluo.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-core</artifactId>
        <version>${fluo.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-integration</artifactId>
        <version>${fluo.version}</version>
        <type>test-jar</type>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-mapreduce</artifactId>
        <version>${fluo.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-mini</artifactId>
        <version>${fluo.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-recipes-accumulo</artifactId>
        <version>${fluo-recipes.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>fluo-recipes-core</artifactId>
        <version>${fluo-recipes.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>webindex-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>webindex-data</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.fluo</groupId>
        <artifactId>webindex-ui</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
      </dependency>
      <dependency>
        <groupId>org.apache.accumulo</groupId>
        <artifactId>accumulo-core</artifactId>
        <version>${accumulo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.accumulo</groupId>
        <artifactId>accumulo-minicluster</artifactId>
        <version>${accumulo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.accumulo</groupId>
        <artifactId>accumulo-test</artifactId>
        <version>${accumulo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.hadoop</groupId>
        <artifactId>hadoop-client</artifactId>
        <version>${hadoop.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-core_2.10</artifactId>
        <version>1.5.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.thrift</groupId>
        <artifactId>libthrift</artifactId>
        <version>${thrift.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.zookeeper</groupId>
        <artifactId>zookeeper</artifactId>
        <version>3.4.6</version>
      </dependency>
      <dependency>
        <groupId>org.netpreserve.commons</groupId>
        <artifactId>webarchive-commons</artifactId>
        <version>1.1.2</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.12</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.7.12</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <configuration>
            <archive>
              <manifest>
                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
              <manifestEntries>
                <!-- sealing breaks ITs with shaded jar, which is used by this example -->
                <Sealed>false</Sealed>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.rat</groupId>
          <artifactId>apache-rat-plugin</artifactId>
          <configuration>
            <excludes>
              <exclude>README.md</exclude>
              <exclude>docs/**.md</exclude>
              <exclude>conf/webindex-tests.txt</exclude>
              <exclude>src/test/resources/*.warc</exclude>
              <exclude>src/test/resources/data/set1/*.txt</exclude>
              <exclude>src/main/resources/splits/*.txt</exclude>
              <exclude>src/main/resources/io/fluo/webindex/ui/views/*.ftl</exclude>
              <exclude>src/main/resources/io/fluo/webindex/ui/views/common/*.ftl</exclude>
              <exclude>logs/*</exclude>
              <exclude>paths/*</exclude>
              <exclude>dependency-reduced-pom.xml</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <systemPropertyVariables>
              <io.fluo.it.instance.name>it-instance-maven</io.fluo.it.instance.name>
              <io.fluo.it.instance.clear>false</io.fluo.it.instance.clear>
            </systemPropertyVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
